// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#render(token, node, options) make api calls 1`] = `
Object {
  "jobs": Array [
    Object {
      "accessToken": undefined,
      "body": Object {
        "messages": Array [
          Object {
            "text": "Hello LINE",
            "type": "text",
          },
          Object {
            "originalContentUrl": "https://...",
            "previewImageUrl": "https://...",
            "quickReply": Object {
              "items": Array [
                Object {
                  "action": Object {
                    "label": "HI",
                    "text": "Hi!",
                    "type": "message",
                  },
                  "imageUrl": undefined,
                  "type": "action",
                },
              ],
            },
            "type": "image",
          },
        ],
        "to": "john_doe",
      },
      "chatChannelId": "_CHANNEL_ID_",
      "key": "line._CHANNEL_ID_.john_doe",
      "method": "POST",
      "path": "v2/bot/message/push",
    },
    Object {
      "accessToken": undefined,
      "body": null,
      "chatChannelId": "_CHANNEL_ID_",
      "key": "line._CHANNEL_ID_.john_doe",
      "method": "POST",
      "path": "v2/bot/user/john_doe/richmenu/newbie",
    },
  ],
  "results": Array [
    Object {
      "body": Object {},
      "code": 200,
      "headers": Object {},
    },
    Object {
      "body": Object {},
      "code": 200,
      "headers": Object {},
    },
  ],
  "tasks": Array [
    Object {
      "payload": Array [
        Object {
          "accessToken": undefined,
          "body": Object {
            "messages": Array [
              Object {
                "text": "Hello LINE",
                "type": "text",
              },
              Object {
                "originalContentUrl": "https://...",
                "previewImageUrl": "https://...",
                "quickReply": Object {
                  "items": Array [
                    Object {
                      "action": Object {
                        "label": "HI",
                        "text": "Hi!",
                        "type": "message",
                      },
                      "imageUrl": undefined,
                      "type": "action",
                    },
                  ],
                },
                "type": "image",
              },
            ],
            "to": "john_doe",
          },
          "chatChannelId": "_CHANNEL_ID_",
          "key": "line._CHANNEL_ID_.john_doe",
          "method": "POST",
          "path": "v2/bot/message/push",
        },
        Object {
          "accessToken": undefined,
          "body": null,
          "chatChannelId": "_CHANNEL_ID_",
          "key": "line._CHANNEL_ID_.john_doe",
          "method": "POST",
          "path": "v2/bot/user/john_doe/richmenu/newbie",
        },
      ],
      "type": "dispatch",
    },
  ],
}
`;

exports[`#render(token, node, options) works with replyToken 1`] = `
Object {
  "jobs": Array [
    Object {
      "accessToken": undefined,
      "body": Object {
        "messages": Array [
          Object {
            "text": "Hello LINE",
            "type": "text",
          },
          Object {
            "originalContentUrl": "https://...",
            "previewImageUrl": "https://...",
            "quickReply": Object {
              "items": Array [
                Object {
                  "action": Object {
                    "label": "HI",
                    "text": "Hi!",
                    "type": "message",
                  },
                  "imageUrl": undefined,
                  "type": "action",
                },
              ],
            },
            "type": "image",
          },
        ],
        "replyToken": "__REPLY_TOKEN__",
      },
      "chatChannelId": "_CHANNEL_ID_",
      "key": "line._CHANNEL_ID_.john_doe",
      "method": "POST",
      "path": "v2/bot/message/reply",
    },
    Object {
      "accessToken": undefined,
      "body": null,
      "chatChannelId": "_CHANNEL_ID_",
      "key": "line._CHANNEL_ID_.john_doe",
      "method": "POST",
      "path": "v2/bot/user/john_doe/richmenu/newbie",
    },
  ],
  "results": Array [
    Object {
      "body": Object {},
      "code": 200,
      "headers": Object {},
    },
    Object {
      "body": Object {},
      "code": 200,
      "headers": Object {},
    },
  ],
  "tasks": Array [
    Object {
      "payload": Array [
        Object {
          "accessToken": undefined,
          "body": Object {
            "messages": Array [
              Object {
                "text": "Hello LINE",
                "type": "text",
              },
              Object {
                "originalContentUrl": "https://...",
                "previewImageUrl": "https://...",
                "quickReply": Object {
                  "items": Array [
                    Object {
                      "action": Object {
                        "label": "HI",
                        "text": "Hi!",
                        "type": "message",
                      },
                      "imageUrl": undefined,
                      "type": "action",
                    },
                  ],
                },
                "type": "image",
              },
            ],
            "replyToken": "__REPLY_TOKEN__",
          },
          "chatChannelId": "_CHANNEL_ID_",
          "key": "line._CHANNEL_ID_.john_doe",
          "method": "POST",
          "path": "v2/bot/message/reply",
        },
        Object {
          "accessToken": undefined,
          "body": null,
          "chatChannelId": "_CHANNEL_ID_",
          "key": "line._CHANNEL_ID_.john_doe",
          "method": "POST",
          "path": "v2/bot/user/john_doe/richmenu/newbie",
        },
      ],
      "type": "dispatch",
    },
  ],
}
`;

exports[`#renderMulticast(targets, node) make api call to message/mulitcast 1`] = `
Object {
  "jobs": Array [
    Object {
      "accessToken": undefined,
      "body": Object {
        "messages": Array [
          Object {
            "text": "Hello LINE",
            "type": "text",
          },
          Object {
            "originalContentUrl": "https://...",
            "previewImageUrl": "https://...",
            "quickReply": Object {
              "items": Array [
                Object {
                  "action": Object {
                    "label": "HI",
                    "text": "Hi!",
                    "type": "message",
                  },
                  "imageUrl": undefined,
                  "type": "action",
                },
              ],
            },
            "type": "image",
          },
        ],
        "to": Array [
          "john",
          "wick",
          "dog",
        ],
      },
      "chatChannelId": "_CHANNEL_ID_",
      "key": "line.multicast",
      "method": "POST",
      "path": "v2/bot/message/multicast",
    },
    Object {
      "accessToken": undefined,
      "body": Object {
        "richMenuId": "newbie",
        "userIds": Array [
          "john",
          "wick",
          "dog",
        ],
      },
      "chatChannelId": "_CHANNEL_ID_",
      "key": "line.multicast",
      "method": "POST",
      "path": "v2/bot/richmenu/bulk/link",
    },
  ],
  "results": Array [
    Object {
      "body": Object {},
      "code": 200,
      "headers": Object {},
    },
    Object {
      "body": Object {},
      "code": 200,
      "headers": Object {},
    },
  ],
  "tasks": Array [
    Object {
      "payload": Array [
        Object {
          "accessToken": undefined,
          "body": Object {
            "messages": Array [
              Object {
                "text": "Hello LINE",
                "type": "text",
              },
              Object {
                "originalContentUrl": "https://...",
                "previewImageUrl": "https://...",
                "quickReply": Object {
                  "items": Array [
                    Object {
                      "action": Object {
                        "label": "HI",
                        "text": "Hi!",
                        "type": "message",
                      },
                      "imageUrl": undefined,
                      "type": "action",
                    },
                  ],
                },
                "type": "image",
              },
            ],
            "to": Array [
              "john",
              "wick",
              "dog",
            ],
          },
          "chatChannelId": "_CHANNEL_ID_",
          "key": "line.multicast",
          "method": "POST",
          "path": "v2/bot/message/multicast",
        },
        Object {
          "accessToken": undefined,
          "body": Object {
            "richMenuId": "newbie",
            "userIds": Array [
              "john",
              "wick",
              "dog",
            ],
          },
          "chatChannelId": "_CHANNEL_ID_",
          "key": "line.multicast",
          "method": "POST",
          "path": "v2/bot/richmenu/bulk/link",
        },
      ],
      "type": "dispatch",
    },
  ],
}
`;
